--- a/calendar.html
+++ b/calendar.html
@@ -13,12 +13,12 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 
 
-<div id="calendar" class="graph"></div>
+<div id="calendar" class="graph"></div><div id="barchart" class="chart"></div>
 
 <form>
 Select Location:
 <select id="mySelect" onchange="getOption()">
-  <option value="Entrances">Total Parc</option>
+  <option value="Total">Total Parc</option>
   <option value="Entrances">Parc Entrances</option>
   <option value="Campsites">Parc Campsites</option>
 </select>
@@ -30,6 +30,7 @@ Select Location:
 <div id="type5" class="graph"></div><br>
 <div id="type6" class="graph"></div><br>    
 <div id="typeP" class="graph"></div><br>
+<div id="allCamps" class="graph"></div><br>
 <script src="calendar.js"></script>
 </body>
 </html>
