--- a/calendar.html
+++ b/calendar.html
@@ -13,7 +13,7 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 
 
-<div id="calendar" class="graph"></div><div id="barchart" class="chart"></div>
+<div id="calendar" class="graph"></div>
 
 <form>
 Select Location:
