camping 0 en 1 added

--- a/calendar.html
+++ b/calendar.html
@@ -31,6 +31,8 @@ Select Location:
 <div id="type6" class="graph"></div><br>    
 <div id="typeP" class="graph"></div><br>
 <div id="allCamps" class="graph"></div><br>
+<div id="camp0" class="graph"></div><br>
+<div id="camp1" class="graph"></div><br>
 <script src="calendar.js"></script>
 </body>
 </html>
