updated csv d3 style design

--- a/overview.html
+++ b/overview.html
@@ -13,26 +13,18 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 
 
-<div id="calendar" class="graph"></div>
 
-<form>
 Select Location:
 <select id="mySelect" onchange="getOption()">
   <option value="Total">Total Parc</option>
   <option value="Entrances">Parc Entrances</option>
   <option value="Campsites">Parc Campsites</option>
 </select>
-</form>               <br>
-<div id="type1" class="graph"></div><br>
-<div id="type2" class="graph"></div><br>
-<div id="type3" class="graph"></div><br>
-<div id="type4" class="graph"></div><br>
-<div id="type5" class="graph"></div><br>
-<div id="type6" class="graph"></div><br>    
-<div id="typeP" class="graph"></div><br>
-<div id="allCamps" class="graph"></div><br>
-<div id="camp0" class="graph"></div><br>
-<div id="camp1" class="graph"></div><br>
-<script src="calendar.js"></script>
+
+<div id="calendar" class="graph"></div>
+<div id="subcalendar"></div>
+
+
+<script src="overview.js"></script>
 </body>
 </html>
