Total en Camping selector added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h3>VAST Challenge Index
           <ul>
           
-          <li><a href="https://pvtwuyver.github.io/vast2017/calendar.html">Calendar view</a></li>
+          <li><a href="https://pvtwuyver.github.io/vast2017/overview.html">Calendar view</a></li>
          
         </h3>
           </ul>    
