--- a/overview.html
+++ b/overview.html
@@ -15,7 +15,7 @@
 
 
 Select Location:
-<select id="mySelect" onchange="getOption()">
+<select id="mySelect" onchange="getOption()"><br>
   <option value="Total">Total Parc</option>
   <option value="Entrances">Parc Entrances</option>
   <option value="Campsites">Parc Campsites</option>
