--- a/overview.html
+++ b/overview.html
@@ -26,7 +26,7 @@ Select Location:
 	<div id="linechart"><svg width="960" height="500"></svg></div>
 	<div id="calendar" width="750" height="270"></div>
 </div>
-<div id="subcalendar" class="graph"></div>
+<div id="subcalendar" class="graph"></div><div id="barchart" class="graph"></div>
 <script src="overview.js"></script>
 </body>
 </html>
