--- a/barchart.html
+++ b/barchart.html
@@ -30,7 +30,7 @@ var x = d3.scaleBand().rangeRound([0, width]).padding(0.1),
 var g = svg.append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-d3.tsv("testbar.tsv", function(d) {
+d3.tsv("data/test.tsv", function(d) {
   d.Total = +d.Total;
   return d;
 }, function(error, data) {
