--- a/barchart.html
+++ b/barchart.html
@@ -27,7 +27,7 @@ var y = d3.scaleLinear()
 var z = d3.scaleOrdinal(d3.schemeCategory10);
     //.range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
 
-d3.csv("data/busylocations.csv", function(d, i, columns) {
+d3.csv("data/camp0minutes.csv", function(d, i, columns) {
   for (i = 1, t = 0; i < columns.length; ++i) t += d[columns[i]] = +d[columns[i]];
   d.total = t;
   return d;
