--- a/overview.html
+++ b/overview.html
@@ -29,7 +29,12 @@ Select Location:
 <img src="example_plot.jpg" width="475" height="264" alt="" style="float:right;width:360px;height:250px;"/></div>
 <div id="calendar" width="750" height="270"></div>
 </div>
-<div id="subcalendar" class="graph"></div><div id="barchart" class="graph"></div>
+<div id="subcalendar" class="graph"></div>
+
+<div id="barchart">
+<svg width="960" height="500"></svg>
+</div>
+
 <script src="overview.js"></script>
 </body>
 </html>
