legend barchart added

--- a/overview.html
+++ b/overview.html
@@ -26,14 +26,14 @@ Select Location:
 
 <div id="holder">	
 <div id="linechart"><svg width="960" height="500"></svg>
-<img src="example_plot.jpg" width="475" height="264" alt="" style="float:right;width:360px;height:250px;"/></div>
+<div id="barchart"style="float:right;">
+<svg width="520" height="250"></svg>
+</div>
 <div id="calendar" width="750" height="270"></div>
 </div>
 <div id="subcalendar" class="graph"></div>
 
-<div id="barchart">
-<svg width="960" height="500"></svg>
-</div>
+
 
 <script src="overview.js"></script>
 </body>
