--- a/overview.html
+++ b/overview.html
@@ -25,11 +25,9 @@ Select Location:
 
 
 <div id="holder">	
-<div id="linechart"><svg width="960" height="500"></svg>
-<div id="barchart"style="float:right;">
-<svg width="520" height="250"></svg>
-</div>
-<div id="calendar" width="750" height="270"></div>
+	<div id="linechart"><svg width="960" height="500"></svg></div>
+	<div id="barchart"style="float:right;" ><svg width="520" height="250"></svg></div>
+	<div id="calendar" width="750" height="270"></div>
 </div>
 <div id="subcalendar" class="graph"></div>
 
