all locations added incl 24H charts

--- a/overview.html
+++ b/overview.html
@@ -24,12 +24,16 @@
   <option value="Total">Total Parc</option>
   <option value="Entrances">Parc Entrances</option>
   <option value="Campsites">Parc Campsites</option>
+  <option value="Rangerbase">Rangerbase</option>
+  <option value="Rangerstops">Rangerstops</option>
+  <option value="Gates">Gates (Ranger)</option>
+  <option value="Generalgates">General Gates</option>
 </select>
 
 
 <div id="holder">	
 	<div id="linechart"><svg width="960" height="500"></svg></div>
-	<div id="barchart"><svg width="520" height="250"></svg></div>
+	<div id="barchart"><svg width="620" height="250"></svg></div>
 	<div id="calendar" width="750" height="270"></div>
 </div>
 <div id="subcalendar" class="graph"></div>
