--- a/overview.html
+++ b/overview.html
@@ -11,15 +11,12 @@
  	<script src="https://d3js.org/d3.v4.min.js"></script>
 <link rel="stylesheet" type="text/css" href="calendar.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 
-
-
-
-<p>Select Location:</p>
+<h2>Select Location in Park:</h2>
 <select class="selectpicker" id="mySelect" onchange="getOption()"><br>
   <option value="Total">Total Parc</option>
   <option value="Entrances">Parc Entrances</option>
@@ -30,15 +27,12 @@
   <option value="Generalgates">General Gates</option>
 </select>
 
-
 <div id="holder">	
 	<div id="linechart"><svg width="960" height="500"></svg></div>
-	<div id="barchart"><svg width="620" height="250"></svg></div>
 	<div id="calendar" width="750" height="270"></div>
+	<div id="barchart"><svg width="620" height="250"></svg></div>
 </div>
 <div id="subcalendar" class="graph"></div>
-
-
 
 <script src="overview.js"></script>
 </body>
