--- a/overview.html
+++ b/overview.html
@@ -9,7 +9,7 @@
  	MINOR PROGRAMMEREN UVA 2017
  	+-+-+-+-+ +-+-+-+-+-+-+-+-+-+ +-+-+-+-+   -->
  	<script src="https://d3js.org/d3.v4.min.js"></script>
-<link rel="stylesheet" type="text/css" href="calendar.css">
+<link rel="stylesheet" type="text/css" href="vast2017.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -34,6 +34,6 @@
 </div>
 <div id="subcalendar" class="graph"></div>
 
-<script src="overview.js"></script>
+<script src="vast2017.js"></script>
 </body>
 </html>
