--- a/vast2017.html
+++ b/vast2017.html
@@ -52,7 +52,8 @@
             <div class="w3-container">
             </div>
             <div class="w3-bar-block">
-                <h5>Selection specific calendars</h5>
+                <h4>Selection specific calendars</h4>
+                <h5>Number of UNIQUE car IDs</h5>
                 <div class="w3-grey">
                     <div id="subcalendar" class="graph"></div>
                     <!-- extra breaks to ensure correct visualisation of bottom calendar -->
