--- a/vast2017.html
+++ b/vast2017.html
@@ -35,7 +35,7 @@
         <!-- Top container -->
         <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
             <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();"><i class="fa fa-bars"></i>  Menu</button>
-            <span class="w3-bar-item w3-right">Peter van Twuyver, 10872809</span>
+            <span class="w3-bar-item w3-right">VAST Challenge 2017</span>
         </div>
 
         <!-- Sidebar/menu -->
@@ -45,7 +45,7 @@
                     <img src="/w3images/avatar2.png" class="w3-circle w3-margin-right" style="width:46px">
                 </div>
                 <div class="w3-col s8 w3-bar">
-                    <strong>VAST 2017 Challenge</strong><br>
+                    <strong>info text </strong><br>
                 </div>
             </div>
             <hr>
