--- a/vast2017.html
+++ b/vast2017.html
@@ -30,7 +30,7 @@
         }
     </style>
 
-    <body class="w3-light-grey">
+    <body >
 
         <!-- Top container -->
         <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
@@ -42,10 +42,10 @@
         <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:500px;" id="mySidebar"><br>
             <div class="w3-container w3-row">
                 <div class="w3-col s4">
-                    <img src="/w3images/avatar2.png" class="w3-circle w3-margin-right" style="width:46px">
+                    
                 </div>
                 <div class="w3-col s8 w3-bar">
-                    <strong>info text </strong><br>
+                    <strong>Select location type in right window.  </strong><br>
                 </div>
             </div>
             <hr>
@@ -62,8 +62,6 @@
                     <BR>
                 </div>
         </nav>
-
-
         <!-- Overlay effect when opening sidebar on small screens -->
         <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
@@ -73,6 +71,15 @@
             <!-- Header -->
             <header class="w3-container" style="padding-top:22px">
                 <h5><b><i class="fa fa-dashboard"></i> Busyness on Checkpoints in Boonsong Lekagul Nature Preserve</b></h5>
+<div id= "background">
+Select your personal background color: 
+
+<form name="color" method="post" action="">
+<input type="radio" name="color" value="radio" onClick="changeColour('g')"> grey
+<input type="radio" name="color" value="radio" onClick="changeColour('s')"> whitesmoke
+<input type="radio" name="color" value="radio" onClick="changeColour('w')"> white
+</form>
+</div>
                 <h2>Select Checkpoint-type in Park:</h2>
                 <select class="selectpicker" id="mySelect" onchange="getOption()"><br>
                   <option value="Generalgates">General Gates</option>
@@ -96,7 +103,7 @@
                     <div class="w3-third">
                     </div>
                     <div class="w3-twothird">
-                        <h5>Total overview</h5>
+                        <h5>Total overview busyness</h5>
 
                         <div id="calendar" width="750" height="270"></div>
 
