Map park added with locations

--- a/vast2017.html
+++ b/vast2017.html
@@ -52,6 +52,7 @@
             <div class="w3-container">
             </div>
             <div class="w3-bar-block">
+                <img id="myImage" src="data/Lekagul_map.jpg" width="475" height="264" alt="Lekagul Map"/>
                 <h4>Selection specific calendars</h4>
                 <h5>Number of UNIQUE car IDs</h5>
                 <div class="w3-grey">
@@ -70,7 +71,7 @@
 
             <!-- Header -->
             <header class="w3-container" style="padding-top:22px">
-                <h5><b><i class="fa fa-dashboard"></i> Busyness on Checkpoints in Boonsong Lekagul Nature Preserve</b></h5>
+                
 <div id= "background">
 Select your personal background color: 
 
@@ -80,6 +81,7 @@ Select your personal background color:
 <input type="radio" name="color" value="radio" onClick="changeColour('w')"> white
 </form>
 </div>
+<h5><b><i class="fa fa-dashboard"></i> Busyness on Checkpoints in Boonsong Lekagul Nature Preserve</b></h5>
                 <h2>Select Checkpoint-type in Park:</h2>
                 <select class="selectpicker" id="mySelect" onchange="getOption()"><br>
                   <option value="Generalgates">General Gates</option>
