--- a/vast2017.html
+++ b/vast2017.html
@@ -123,5 +123,6 @@ Select your personal background color:
                 <!-- End page content -->
             </div>
             <script src="vast2017.js"></script>
+            <script src="date.js"></script>
     </body>
 </html>
