--- a/vast2017.html
+++ b/vast2017.html
@@ -12,7 +12,7 @@
     <!-- HTML template from https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_analytics&stacked=h -->
 
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="vast2017.css">
+    <link rel="stylesheet" type="text/css" href="css/vast2017.css">
     <title>VAST2017 Programmeerproject</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -124,7 +124,7 @@ Select your personal background color:
 
                 <!-- End page content -->
             </div>
-            <script src="vast2017.js"></script>
-            <script src="date.js"></script>
+            <script src="js/vast2017.js"></script>
+            <script src="js/date.js"></script>
     </body>
 </html>
